Created hourCounter and overtimeCalc. 	-hourCounter.py: Calculates number of hours to nearest 1/10 worked today 	-overtimeCalc.py: Calculates the number of extra hours worked this month

--- a/Pipfile
+++ b/Pipfile
@@ -5,10 +5,14 @@ verify_ssl = true
 
 [dev-packages]
 pylint = "*"
+rope = "*"
 
 [packages]
 plotly = "4.9.0"
 pandas = "*"
+delorean = "*"
+texttable = "*"
+tabulate = "*"
 
 [requires]
 python_version = "3.7"
